Fix second image on mobile view

--- a/DrzewicaCraft/Content/bootstrap.css
+++ b/DrzewicaCraft/Content/bootstrap.css
@@ -3364,6 +3364,10 @@ body.landing #page-wrapper {
         background-attachment: scroll;
     }
 
+    #scrollImageOne {
+        background-attachment: scroll;
+    }
+
     #banner h2 {
         font-size: 3.5em;
     }
